<?xml version="1.0"?>
<package format="3">
  <name>sensor_fusion</name>
  <version>0.0.1</version>
  <description>None</description>
  <maintainer email="matsunoki1130@gmail.com">Fumiya Matsuzaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
